# soundtest

./: Cargo.toml
docs/: DESIGN.md  PLAN.md
src/: ai.rs  backend.rs  cli.rs  config.rs  effects.rs  lib.rs  render_plan.rs
