[package]
name = "soundtest"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
rand = "0.9.0"
reqwest = { version = "0.12.12", default-features = false, features = ["json", "rustls-tls"] }
rodio = "0.20.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tempfile = "3.17.1"
time = { version = "0.3.37", features = ["formatting"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
toml = "0.8.20"
which = "7.0.2"
